# bookclub

./: .env  Cargo.toml  Dockerfile  README.md  compose.dev.yml  packages.txt
drake-demos/: pyproject.toml
drake-demos/drake_demos/: cart_pole.xml  cartpole_direct.py  cartpole_mpc.py  mujoco_sim.py  traj.py
drake_demos/: diffdrive.py
motion/: Cargo.toml
motion/src/: lib.rs
velocity_kinematics/: Cargo.toml
velocity_kinematics/src/: lib.rs  main.rs
velocity_kinematics/tests/: velocity_kinematics.rs
